cmake_minimum_required(VERSION 3.19)
project(AOC2020)

set(CMAKE_CXX_STANDARD 17)

add_executable(AOC2020 main.cpp Day12/Ferry.cpp Day12/Ferry.h Day12/NavigationInstructor.cpp Day12/NavigationInstructor.h Day12/Direction.h Day12/WavePointNavigationInstructor.cpp Day12/WavePointNavigationInstructor.h Day12/Day12.cpp Day12/Day12.h)